--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,6 @@ services:
       - "3000:3000"
     volumes:
       - ./source:/app
+      - /app/node_modules # ホストのnode_modulesをオーバーライドしてコンテナ内のものを使用
     working_dir: /app
     command: npm run dev
